--- a/[그리디]큰수의법칙.ipynb
+++ b/[그리디]큰수의법칙.ipynb
@@ -6,7 +6,7 @@
       "name": "[그리디]큰수의법칙.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM5/5+to3GCoCHwlDi35m0r",
+      "authorship_tag": "ABX9TyM064vJZXiBNq1mzl+gY2ZX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,7 +57,7 @@
         "        j += 1\n",
         "print(ans)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -69,6 +69,60 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PSkbv-JIBPlm",
+        "outputId": "66627a9a-0fef-4ff4-ad45-f4b67b755f60"
+      },
+      "source": [
+        "# 수학적 아이디어를 이용한 풀이\n",
+        "# int(M/(K+1)) * K + M % (K+1)을 이용하여\n",
+        "# 가장큰 수가 더해지는 값을 더한 후 그다음으로 큰 수를 더하는것으로\n",
+        "# 답을 구한다.\n",
+        "n,m,k = map(int, input().split())\n",
+        "data = list(map(int, input().split()))\n",
+        "\n",
+        "data.sort()\n",
+        "first = data[n-1] #가장 큰 수\n",
+        "second = data[n-2] #두번째로 큰 수\n",
+        "\n",
+        "count = int(m / (k+1)) * k\n",
+        "count += m%(k+1)\n",
+        "\n",
+        "result = 0\n",
+        "result += (count) * first #가장큰 수 더하기\n",
+        "result += (m-count) * second #두번째로 큰 수 더하기\n",
+        "\n",
+        "print(result)"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "5 8 3\n",
+            "2 4 5 4 6\n",
+            "46\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "47eMNWq7CNIy"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
